Commit for SOLR-12859 for Solr 8.4.1